spade-tests/src/snapshots/spade_tests__typeinference__field_based_type_inference_works.snap
---
source: spade-tests/src/typeinference.rs
---
struct A {
    x: bool
}
fn a() -> int<32> {
    let a: int<32> = A(true).x;
    a
}


error: Expected type int<32>, got bool
  ┌─ testinput:5:22
  │
5 │     let a: int<32> = A(true).x;
  │                      ^^^^^^^^^ Expected int<32>
  │
  = note: Expected: int<32>
               Got: bool


